--- a/assets/success.html
+++ b/assets/success.html
@@ -1,11 +1,14 @@
-const html = `
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <style>
-      html, body, main {
+      html,
+      body,
+      main {
         height: 100%;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+          "Open Sans", "Helvetica Neue", sans-serif;
         color: white;
       }
 
@@ -18,7 +21,7 @@ const html = `
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background: linear-gradient(90deg,#da7272 ,#7289da);
+        background: linear-gradient(90deg, #da7272, #7289da);
       }
 
       h1 {
@@ -40,6 +43,4 @@ const html = `
       <h6>@raycast-discord-utils</h6>
     </main>
   </body>
-</html>`;
-
-export default html;
+</html>
